--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* styles.css - Mobil ve masaüstü çember boyutları düzeltildi */
+/* styles.css - Mobil ve masaüstü çember boyutları korundu */
 
 /* Temel: Tarayıcı varsayılanlarını sıfırla */
 * {
@@ -212,7 +212,7 @@ button:hover {
 
 .circle {
   position: relative;
-  width: 90px; /* Masaüstü için büyütüldü */
+  width: 90px;
   height: 90px;
 }
 
@@ -231,7 +231,7 @@ button:hover {
 
 .circle circle:nth-child(2) {
   stroke: var(--stroke-color);
-  stroke-dasharray: 238.76; /* 2 * π * r = 2 * π * 38 */
+  stroke-dasharray: 238.76;
   stroke-dashoffset: calc(238.76 - (var(--percent) * 238.76 / 100));
   transition: stroke-dashoffset 0.8s ease;
 }
@@ -241,7 +241,7 @@ button:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 1em; /* Masaüstü için büyütüldü */
+  font-size: 1em;
   font-weight: bold;
   color: white;
   text-align: center;
@@ -254,7 +254,7 @@ button:hover {
 /* Mobil için circular stats */
 @media (max-width: 767px) {
   .circle {
-    width: 80px; /* 70px -> 80px */
+    width: 80px;
     height: 80px;
   }
   .circle svg {
